--- a/.github/workflows/sync-to-vercel-repo.yml
+++ b/.github/workflows/sync-to-vercel-repo.yml
@@ -21,6 +21,17 @@ jobs:
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
 
+      - name: Remove .github directory (not needed for Vercel repo)
+        run: |
+          rm -rf .github
+
+      - name: Configure Git for push
+        run: |
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+          git add -A
+          git commit -m "Sync from junaid3321/amzdudes" || echo "No changes to commit"
+
       - name: Add target repository as remote
         run: |
           git remote add target https://x-access-token:${{ secrets.VERCEL_REPO_TOKEN }}@github.com/amzdudesai02-rgb/amzdudes.git
