--- a/.github/workflows/sync-to-vercel-repo.yml
+++ b/.github/workflows/sync-to-vercel-repo.yml
@@ -27,10 +27,13 @@ jobs:
 
       - name: Configure Git for push
         run: |
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
+          # Get the original commit author from the latest commit
+          ORIGINAL_AUTHOR=$(git log -1 --format='%an')
+          ORIGINAL_EMAIL=$(git log -1 --format='%ae')
+          git config user.name "$ORIGINAL_AUTHOR"
+          git config user.email "$ORIGINAL_EMAIL"
           git add -A
-          git commit -m "Sync from junaid3321/amzdudes" || echo "No changes to commit"
+          git commit -m "Sync from junaid3321/amzdudes [skip vercel]" || echo "No changes to commit"
 
       - name: Add target repository as remote
         run: |
