--- a/vercel.json
+++ b/vercel.json
@@ -5,13 +5,20 @@
   "framework": "vite",
   "rewrites": [
     {
-      "source": "/((?!.*\\.).*)",
-      "destination": "/index.html"
+      "source": "/(.*)",
+      "destination": "/index.html",
+      "has": [
+        {
+          "type": "header",
+          "key": "accept",
+          "value": "text/html"
+        }
+      ]
     }
   ],
   "headers": [
     {
-      "source": "/.*\\.(png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot|css|js|json|xml|txt|webp)",
+      "source": "/(.*\\.(png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot|css|js|json|xml|txt|webp))",
       "headers": [
         {
           "key": "Cache-Control",
