--- a/.github/workflows/sync-to-vercel-repo.yml
+++ b/.github/workflows/sync-to-vercel-repo.yml
@@ -21,20 +21,6 @@ jobs:
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
 
-      - name: Remove .github directory (not needed for Vercel repo)
-        run: |
-          rm -rf .github
-
-      - name: Configure Git for push
-        run: |
-          # Get the original commit author from the latest commit
-          ORIGINAL_AUTHOR=$(git log -1 --format='%an')
-          ORIGINAL_EMAIL=$(git log -1 --format='%ae')
-          git config user.name "$ORIGINAL_AUTHOR"
-          git config user.email "$ORIGINAL_EMAIL"
-          git add -A
-          git commit -m "Sync from junaid3321/amzdudes" || echo "No changes to commit"
-
       - name: Add target repository as remote
         run: |
           git remote add target https://x-access-token:${{ secrets.VERCEL_REPO_TOKEN }}@github.com/amzdudesai02-rgb/amzdudes.git
@@ -51,10 +37,42 @@ jobs:
             echo "✅ Repository access verified"
           fi
 
+      - name: Fetch target repository
+        run: |
+          git fetch target main || echo "Target branch doesn't exist yet, will create it"
+
+      - name: Remove .github directory (not needed for Vercel repo)
+        run: |
+          rm -rf .github
+
+      - name: Configure Git for push
+        run: |
+          # Get the original commit author from the latest commit
+          ORIGINAL_AUTHOR=$(git log -1 --format='%an')
+          ORIGINAL_EMAIL=$(git log -1 --format='%ae')
+          git config user.name "$ORIGINAL_AUTHOR"
+          git config user.email "$ORIGINAL_EMAIL"
+          
+          # Ensure we're on a branch (not detached HEAD)
+          git checkout -B sync-branch || git checkout -b sync-branch
+          
+          # Stage all changes including deletions
+          git add -A
+          
+          # Commit changes if there are any
+          if ! git diff --cached --quiet || ! git diff --quiet; then
+            git commit -m "Sync from junaid3321/amzdudes"
+            echo "✅ Changes committed"
+          else
+            echo "ℹ️ No changes to commit"
+          fi
+
       - name: Push to target repository
         run: |
           echo "Pushing to target repository..."
-          if git push target HEAD:main --force; then
+          # Push the current branch to target's main branch
+          CURRENT_BRANCH=$(git rev-parse --abbrev-ref HEAD)
+          if git push target ${CURRENT_BRANCH}:main --force; then
             echo "✅ Successfully synced to target repository"
           else
             echo "❌ Failed to push to target repository"
